syntax = "proto3";

// ----------------------------- Common ----------------------------- //

message Empty {}

message TaskData { repeated int32 data = 1; }

message TaskResult { int32 result = 1; }

// ----------------------------- User Service ----------------------------- //

message UploadDataRequest { TaskData task_data = 1; }

message UploadDataResponse {
  bool success = 1;
  uint64 task_id = 2;
  uint64 leader_id = 3;
}

message GetResultRequest { uint64 task_id = 1; }

message GetResultResponse { TaskResult task_result = 1; }

service UserService {
  rpc Ping(Empty) returns (Empty);
  rpc UploadData(UploadDataRequest) returns (UploadDataResponse) {}
  rpc GetResult(GetResultRequest) returns (GetResultResponse) {}
}

// ----------------------------- Raft Entry ----------------------------- //

message Task {
  uint64 id = 1;
  uint64 assignee = 2;
  TaskData task_data = 3;
  TaskResult task_result = 4;
}

enum TaskStatus {
  TO_DO = 0;
  IN_PROGRESS = 2;
  DONE = 1;
}

message AddRequest { TaskStatus to = 1; }

message MoveRequest {
  TaskStatus to = 1;
  TaskStatus from = 2;
}

message DeleteRequest { TaskStatus from = 1; }

// According to the CommandType
// needed request will be chosen
message Command {
  enum CommandType {
    ADD = 0;
    MOVE = 1;
    DELETE = 2;
  }

  CommandType command = 1;
  AddRequest add_request = 2;
  MoveRequest move_request = 3;
  DeleteRequest delete_request = 4;
}

// Log entry to store
message Entry {
  uint64 term = 1;
  Task task = 2;
  Command command = 3;
}

// ----------------------------- Raft Service ----------------------------- //

// Main raft servers service
service RaftService {
  rpc AppendEntry(AppendEntryRequest) returns (AppendEntryResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

// Invoked by leader to replicate log entries
// Also used as heartbeat
message AppendEntryRequest {
  uint64 term = 1;           // leader's term
  uint64 leader_id = 2;      // so follower can redirect clients
  uint64 prev_log_index = 3; // index of log entry preceding new ones
  uint64 prev_log_term = 4;  // term of prev_log_index
  Entry entry = 5;           // log entry to store (empty for heartbeat)
  uint64 leader_commit = 6;  // leader's commit index
}

message AppendEntryResponse {
  uint64 term = 1;  // current term for leader to update itself
  bool success = 2; // true if follower contained entry
                    // matching prev_log_index and prev_log_term
}

message RequestVoteRequest {
  uint64 term = 1;           // candidate's term
  uint64 candidate_id = 2;   // candidate requesting vote
  uint64 last_log_entry = 3; // index of candidate's log entry
  uint64 last_log_term = 4;  // term of candidate's log entry
}

message RequestVoteResponse {
  uint64 term = 1;       // current term for candidate to update itself
  bool vote_granted = 2; // true if candidate recieved vote
}

// ----------------------------- Worker Service ----------------------------- //

enum NodeStatus {
  IDLE = 0;
  BUSY = 1;
  COMPLETED = 2;
}

message ConnectResponse {
  Task task = 1;
  uint64 leader_id = 2;
}

message WorkerStatus {
  NodeStatus status = 1;
  uint64 task_id = 2;
  TaskResult task_result = 3;
}

message AssignTaskRequest {
  uint64 task_id = 1;
}

message AssignTaskResponse {
  bool success = 1;
  uint64 worker_id = 2;
}

message SendTaskRequest {
  Task task = 1;
}

message SendTaskResponse {
  bool success = 1;
}

message GetWorkerResultRequest {
  uint64 worker_id = 1;
  uint64 task_id = 2;
}

message GetWorkerResultResponse {
  TaskResult task_result = 2;
}

service WorkerService {
  rpc Connect(stream WorkerStatus) returns (stream ConnectResponse) {}
  rpc AssignTask(AssignTaskRequest) returns (AssignTaskResponse) {}
  rpc SendTask(SendTaskRequest) returns (SendTaskResponse) {}
  rpc GetWorkerResult(GetWorkerResultRequest) returns (GetWorkerResultResponse) {}
}

